alignement and beadcrumbs corrections

--- a/src/AppBundle/Resources/public/scss/style.scss
+++ b/src/AppBundle/Resources/public/scss/style.scss
@@ -35,7 +35,7 @@ $gray-dark: #292b2c;
 
 .landing-header {
     .surlignage {
-        height: 3rem;
+        height: 0.3rem;
         background: rgba($elzire-green, 0.7);
         color: white;
         font-family: "Freestyle";
@@ -103,6 +103,7 @@ $gray-dark: #292b2c;
 
 .breadcrumb {
     margin-bottom: 0rem !important;
+    font-size: 0.8rem !important;
 }
 .breadcrumb-separator {
     height: 2px;
